--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.3",
     "reactstrap": "^8.9.0",
-    "spring": "^0.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
