--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.0.1",
     "fontawesome": "^5.6.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
